toolbox_and_notes/grammar.output
Grammar

    0 $accept: Script $end

    1 Script: CommandList

    2 CommandList: Command
    3            | Command AND Command
    4            | Command OR Command

    5 Command: SimpleCommand
    6        | Pipeline
    7        | CompoundCommand

    8 SimpleCommand: Assignments WORD ArgumentsOrRedirections

    9 Assignments: ε
   10            | Assignments Assignment

   11 Assignment: WORD ASSIGNMENT Expression

   12 ArgumentsOrRedirections: ε
   13                        | ArgumentsOrRedirections Argument
   14                        | ArgumentsOrRedirections Redirection

   15 Argument: WORD

   16 Pipeline: Command PIPE Command

   17 Redirection: REDIRECT_OUT WORD
   18            | REDIRECT_APPEND WORD
   19            | REDIRECT_IN WORD
   20            | REDIRECT_IN_APPEND WORD

   21 CompoundCommand: '(' CommandList ')'

   22 Expression: '$' WORD
   23           | WORD


Terminals, with rules where they appear

    $end (0) 0
    '$' (36) 22
    '(' (40) 21
    ')' (41) 21
    error (256)
    WORD (258) 8 11 15 17 18 19 20 22 23
    ASSIGNMENT (259) 11
    PIPE (260) 16
    AND (261) 3
    OR (262) 4
    REDIRECT_OUT (263) 17
    REDIRECT_APPEND (264) 18
    REDIRECT_IN (265) 19
    REDIRECT_IN_APPEND (266) 20


Nonterminals, with rules where they appear

    $accept (15)
        on left: 0
    Script (16)
        on left: 1
        on right: 0
    CommandList (17)
        on left: 2 3 4
        on right: 1 21
    Command (18)
        on left: 5 6 7
        on right: 2 3 4 16
    SimpleCommand (19)
        on left: 8
        on right: 5
    Assignments (20)
        on left: 9 10
        on right: 8 10
    Assignment (21)
        on left: 11
        on right: 10
    ArgumentsOrRedirections (22)
        on left: 12 13 14
        on right: 8 13 14
    Argument (23)
        on left: 15
        on right: 13
    Pipeline (24)
        on left: 16
        on right: 6
    Redirection (25)
        on left: 17 18 19 20
        on right: 14
    CompoundCommand (26)
        on left: 21
        on right: 7
    Expression (27)
        on left: 22 23
        on right: 11


State 0

    0 $accept: • Script $end

    '('  shift, and go to state 1

    $default  reduce using rule 9 (Assignments)

    Script           go to state 2
    CommandList      go to state 3
    Command          go to state 4
    SimpleCommand    go to state 5
    Assignments      go to state 6
    Pipeline         go to state 7
    CompoundCommand  go to state 8


State 1

   21 CompoundCommand: '(' • CommandList ')'

    '('  shift, and go to state 1

    $default  reduce using rule 9 (Assignments)

    CommandList      go to state 9
    Command          go to state 4
    SimpleCommand    go to state 5
    Assignments      go to state 6
    Pipeline         go to state 7
    CompoundCommand  go to state 8


State 2

    0 $accept: Script • $end

    $end  shift, and go to state 10


State 3

    1 Script: CommandList •

    $default  reduce using rule 1 (Script)


State 4

    2 CommandList: Command •
    3            | Command • AND Command
    4            | Command • OR Command
   16 Pipeline: Command • PIPE Command

    PIPE  shift, and go to state 11
    AND   shift, and go to state 12
    OR    shift, and go to state 13

    $default  reduce using rule 2 (CommandList)


State 5

    5 Command: SimpleCommand •

    $default  reduce using rule 5 (Command)


State 6

    8 SimpleCommand: Assignments • WORD ArgumentsOrRedirections
   10 Assignments: Assignments • Assignment

    WORD  shift, and go to state 14

    Assignment  go to state 15


State 7

    6 Command: Pipeline •

    $default  reduce using rule 6 (Command)


State 8

    7 Command: CompoundCommand •

    $default  reduce using rule 7 (Command)


State 9

   21 CompoundCommand: '(' CommandList • ')'

    ')'  shift, and go to state 16


State 10

    0 $accept: Script $end •

    $default  accept


State 11

   16 Pipeline: Command PIPE • Command

    '('  shift, and go to state 1

    $default  reduce using rule 9 (Assignments)

    Command          go to state 17
    SimpleCommand    go to state 5
    Assignments      go to state 6
    Pipeline         go to state 7
    CompoundCommand  go to state 8


State 12

    3 CommandList: Command AND • Command

    '('  shift, and go to state 1

    $default  reduce using rule 9 (Assignments)

    Command          go to state 18
    SimpleCommand    go to state 5
    Assignments      go to state 6
    Pipeline         go to state 7
    CompoundCommand  go to state 8


State 13

    4 CommandList: Command OR • Command

    '('  shift, and go to state 1

    $default  reduce using rule 9 (Assignments)

    Command          go to state 19
    SimpleCommand    go to state 5
    Assignments      go to state 6
    Pipeline         go to state 7
    CompoundCommand  go to state 8


State 14

    8 SimpleCommand: Assignments WORD • ArgumentsOrRedirections
   11 Assignment: WORD • ASSIGNMENT Expression

    ASSIGNMENT  shift, and go to state 20

    $default  reduce using rule 12 (ArgumentsOrRedirections)

    ArgumentsOrRedirections  go to state 21


State 15

   10 Assignments: Assignments Assignment •

    $default  reduce using rule 10 (Assignments)


State 16

   21 CompoundCommand: '(' CommandList ')' •

    $default  reduce using rule 21 (CompoundCommand)


State 17

   16 Pipeline: Command • PIPE Command
   16         | Command PIPE Command •

    $default  reduce using rule 16 (Pipeline)


State 18

    3 CommandList: Command AND Command •
   16 Pipeline: Command • PIPE Command

    PIPE  shift, and go to state 11

    $default  reduce using rule 3 (CommandList)


State 19

    4 CommandList: Command OR Command •
   16 Pipeline: Command • PIPE Command

    PIPE  shift, and go to state 11

    $default  reduce using rule 4 (CommandList)


State 20

   11 Assignment: WORD ASSIGNMENT • Expression

    WORD  shift, and go to state 22
    '$'   shift, and go to state 23

    Expression  go to state 24


State 21

    8 SimpleCommand: Assignments WORD ArgumentsOrRedirections •
   13 ArgumentsOrRedirections: ArgumentsOrRedirections • Argument
   14                        | ArgumentsOrRedirections • Redirection

    WORD                shift, and go to state 25
    REDIRECT_OUT        shift, and go to state 26
    REDIRECT_APPEND     shift, and go to state 27
    REDIRECT_IN         shift, and go to state 28
    REDIRECT_IN_APPEND  shift, and go to state 29

    $default  reduce using rule 8 (SimpleCommand)

    Argument     go to state 30
    Redirection  go to state 31


State 22

   23 Expression: WORD •

    $default  reduce using rule 23 (Expression)


State 23

   22 Expression: '$' • WORD

    WORD  shift, and go to state 32


State 24

   11 Assignment: WORD ASSIGNMENT Expression •

    $default  reduce using rule 11 (Assignment)


State 25

   15 Argument: WORD •

    $default  reduce using rule 15 (Argument)


State 26

   17 Redirection: REDIRECT_OUT • WORD

    WORD  shift, and go to state 33


State 27

   18 Redirection: REDIRECT_APPEND • WORD

    WORD  shift, and go to state 34


State 28

   19 Redirection: REDIRECT_IN • WORD

    WORD  shift, and go to state 35


State 29

   20 Redirection: REDIRECT_IN_APPEND • WORD

    WORD  shift, and go to state 36


State 30

   13 ArgumentsOrRedirections: ArgumentsOrRedirections Argument •

    $default  reduce using rule 13 (ArgumentsOrRedirections)


State 31

   14 ArgumentsOrRedirections: ArgumentsOrRedirections Redirection •

    $default  reduce using rule 14 (ArgumentsOrRedirections)


State 32

   22 Expression: '$' WORD •

    $default  reduce using rule 22 (Expression)


State 33

   17 Redirection: REDIRECT_OUT WORD •

    $default  reduce using rule 17 (Redirection)


State 34

   18 Redirection: REDIRECT_APPEND WORD •

    $default  reduce using rule 18 (Redirection)


State 35

   19 Redirection: REDIRECT_IN WORD •

    $default  reduce using rule 19 (Redirection)


State 36

   20 Redirection: REDIRECT_IN_APPEND WORD •

    $default  reduce using rule 20 (Redirection)
